--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "html5-qrcode": "^2.3.7",
     "quagga": "^0.12.1",
     "react": "^18.2.0",
